// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HvRadioGroup sample snapshot testing ErrorMessage 1`] = `
<div>
  <div
    class="HvRadioGroup-root HvFormElement-root"
  >
    <label
      class="HvRadioGroup-label HvLabel-root HvTypography-root HvTypography-highlightText"
      id="hvradiogroup17-label"
    >
      Choose
    </label>
    <div
      aria-errormessage="hvradiogroup17-error"
      aria-invalid="true"
      aria-labelledby="hvradiogroup17-label"
      class="HvRadioGroup-group HvRadioGroup-vertical HvRadioGroup-invalid"
      role="radiogroup"
    >
      <div
        class="HvRadio-root HvFormElement-root"
      >
        <div
          class="HvRadio-container"
        >
          <span
            class="MuiButtonBase-root MuiRadio-root MuiRadio-colorDefault PrivateSwitchBase-root MuiRadio-root MuiRadio-colorDefault HvRadio-radio HvBaseRadio-root css-1gu2tss-MuiButtonBase-root-MuiRadio-root"
          >
            <input
              class="PrivateSwitchBase-input css-1m9pwf3"
              id="hvradio19-input"
              name="hvradiogroup17"
              type="radio"
              value="1"
            />
            <div
              class="HvIconBase-root HvIconBase-s"
              font-size="medium"
              name="RadioButtonUnselected"
            >
              <svg
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="color0"
                  d="M8 15.5a7.525 7.525 0 115.3-2.2A7.446 7.446 0 018 15.5z"
                  fill="#FBFCFC"
                />
                <path
                  class="color1"
                  d="M8 15a7.023 7.023 0 10-4.943-2.057A6.953 6.953 0 008 15m0 1a8 8 0 118-8 8 8 0 01-8 8z"
                  fill="#414141"
                />
              </svg>
            </div>
          </span>
          <label
            class="HvRadio-label HvLabel-root HvTypography-root HvTypography-highlightText"
            for="hvradio19-input"
            id="hvradio19-label"
          >
            Radio 1
          </label>
        </div>
      </div>
      <div
        class="HvRadio-root HvFormElement-root"
      >
        <div
          class="HvRadio-container"
        >
          <span
            class="MuiButtonBase-root MuiRadio-root MuiRadio-colorDefault PrivateSwitchBase-root MuiRadio-root MuiRadio-colorDefault Mui-checked HvRadio-radio HvBaseRadio-root css-1gu2tss-MuiButtonBase-root-MuiRadio-root"
          >
            <input
              checked=""
              class="PrivateSwitchBase-input css-1m9pwf3"
              id="hvradio21-input"
              name="hvradiogroup17"
              type="radio"
              value="2"
            />
            <div
              class="HvIconBase-root HvIconBase-s"
              font-size="medium"
              name="RadioButtonSelected"
            >
              <svg
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="color0"
                  d="M8 15.5a7.525 7.525 0 115.3-2.2A7.446 7.446 0 018 15.5z"
                  fill="#414141"
                />
                <path
                  class="color0"
                  d="M8 15a7.023 7.023 0 10-4.943-2.057A6.953 6.953 0 008 15m0 1a8 8 0 118-8 8 8 0 01-8 8z"
                  fill="#414141"
                />
                <path
                  class="color1"
                  d="M8 12a4.013 4.013 0 01-4-4 4.013 4.013 0 014-4 4.013 4.013 0 014 4 4.013 4.013 0 01-4 4z"
                  fill="#FBFCFC"
                />
              </svg>
            </div>
          </span>
          <label
            class="HvRadio-label HvLabel-root HvTypography-root HvTypography-highlightText"
            for="hvradio21-input"
            id="hvradio21-label"
          >
            Radio 2
          </label>
        </div>
      </div>
      <div
        class="HvRadio-root HvFormElement-root"
      >
        <div
          class="HvRadio-container"
        >
          <span
            class="MuiButtonBase-root MuiRadio-root MuiRadio-colorDefault PrivateSwitchBase-root MuiRadio-root MuiRadio-colorDefault HvRadio-radio HvBaseRadio-root css-1gu2tss-MuiButtonBase-root-MuiRadio-root"
          >
            <input
              class="PrivateSwitchBase-input css-1m9pwf3"
              id="hvradio23-input"
              name="hvradiogroup17"
              type="radio"
              value="3"
            />
            <div
              class="HvIconBase-root HvIconBase-s"
              font-size="medium"
              name="RadioButtonUnselected"
            >
              <svg
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="color0"
                  d="M8 15.5a7.525 7.525 0 115.3-2.2A7.446 7.446 0 018 15.5z"
                  fill="#FBFCFC"
                />
                <path
                  class="color1"
                  d="M8 15a7.023 7.023 0 10-4.943-2.057A6.953 6.953 0 008 15m0 1a8 8 0 118-8 8 8 0 01-8 8z"
                  fill="#414141"
                />
              </svg>
            </div>
          </span>
          <label
            class="HvRadio-label HvLabel-root HvTypography-root HvTypography-highlightText"
            for="hvradio23-input"
            id="hvradio23-label"
          >
            Radio 3
          </label>
        </div>
      </div>
    </div>
    <div
      class="HvRadioGroup-error HvWarningText-root HvWarningText-show"
    >
      <div
        class="HvWarningText-defaultIcon HvIconBase-root HvIconBase-s"
        name="Fail"
      >
        <svg
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="color0"
            d="M7.5 4.001h1v6h-1zm0 8h1v-1h-1zM16 8a8 8 0 10-8 8 8 8 0 008-8zm-1 0a7 7 0 11-7-7 7 7 0 017 7z"
            fill="#C62828"
          />
        </svg>
      </div>
      <p
        aria-atomic="true"
        aria-live="polite"
        aria-relevant="additions text"
        class="HvWarningText-warningText HvWarningText-topGutter HvTypography-root HvTypography-normalText"
        id="hvradiogroup17-error"
      >
        No way for this to be valid!
      </p>
    </div>
  </div>
</div>
`;

exports[`HvRadioGroup sample snapshot testing Horizontal 1`] = `
<div>
  <div
    class="HvRadioGroup-root HvFormElement-root"
  >
    <label
      class="HvRadioGroup-label HvLabel-root HvTypography-root HvTypography-highlightText"
      id="hvradiogroup9-label"
    >
      Choose your favorite checkboxes
    </label>
    <label
      class="HvInfoMessage-root HvInfoMessage-gutter HvTypography-root HvTypography-normalText"
      id="hvradiogroup9-description"
    >
      Horizontally, this time
    </label>
    <div
      aria-describedby="hvradiogroup9-description"
      aria-labelledby="hvradiogroup9-label"
      class="HvRadioGroup-group HvRadioGroup-horizontal"
      role="radiogroup"
    >
      <div
        class="HvRadio-root HvFormElement-root"
      >
        <div
          class="HvRadio-container"
        >
          <span
            class="MuiButtonBase-root MuiRadio-root MuiRadio-colorDefault PrivateSwitchBase-root MuiRadio-root MuiRadio-colorDefault HvRadio-radio HvBaseRadio-root css-1gu2tss-MuiButtonBase-root-MuiRadio-root"
          >
            <input
              class="PrivateSwitchBase-input css-1m9pwf3"
              id="hvradio11-input"
              name="hvradiogroup9"
              type="radio"
              value="1"
            />
            <div
              class="HvIconBase-root HvIconBase-s"
              font-size="medium"
              name="RadioButtonUnselected"
            >
              <svg
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="color0"
                  d="M8 15.5a7.525 7.525 0 115.3-2.2A7.446 7.446 0 018 15.5z"
                  fill="#FBFCFC"
                />
                <path
                  class="color1"
                  d="M8 15a7.023 7.023 0 10-4.943-2.057A6.953 6.953 0 008 15m0 1a8 8 0 118-8 8 8 0 01-8 8z"
                  fill="#414141"
                />
              </svg>
            </div>
          </span>
          <label
            class="HvRadio-label HvLabel-root HvTypography-root HvTypography-highlightText"
            for="hvradio11-input"
            id="hvradio11-label"
          >
            Radio 1
          </label>
        </div>
      </div>
      <div
        class="HvRadio-root HvFormElement-root"
      >
        <div
          class="HvRadio-container"
        >
          <span
            class="MuiButtonBase-root MuiRadio-root MuiRadio-colorDefault PrivateSwitchBase-root MuiRadio-root MuiRadio-colorDefault Mui-checked HvRadio-radio HvBaseRadio-root css-1gu2tss-MuiButtonBase-root-MuiRadio-root"
          >
            <input
              checked=""
              class="PrivateSwitchBase-input css-1m9pwf3"
              id="hvradio13-input"
              name="hvradiogroup9"
              type="radio"
              value="2"
            />
            <div
              class="HvIconBase-root HvIconBase-s"
              font-size="medium"
              name="RadioButtonSelected"
            >
              <svg
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="color0"
                  d="M8 15.5a7.525 7.525 0 115.3-2.2A7.446 7.446 0 018 15.5z"
                  fill="#414141"
                />
                <path
                  class="color0"
                  d="M8 15a7.023 7.023 0 10-4.943-2.057A6.953 6.953 0 008 15m0 1a8 8 0 118-8 8 8 0 01-8 8z"
                  fill="#414141"
                />
                <path
                  class="color1"
                  d="M8 12a4.013 4.013 0 01-4-4 4.013 4.013 0 014-4 4.013 4.013 0 014 4 4.013 4.013 0 01-4 4z"
                  fill="#FBFCFC"
                />
              </svg>
            </div>
          </span>
          <label
            class="HvRadio-label HvLabel-root HvTypography-root HvTypography-highlightText"
            for="hvradio13-input"
            id="hvradio13-label"
          >
            Radio 2
          </label>
        </div>
      </div>
      <div
        class="HvRadio-root HvFormElement-root"
      >
        <div
          class="HvRadio-container"
        >
          <span
            class="MuiButtonBase-root MuiRadio-root MuiRadio-colorDefault PrivateSwitchBase-root MuiRadio-root MuiRadio-colorDefault HvRadio-radio HvBaseRadio-root css-1gu2tss-MuiButtonBase-root-MuiRadio-root"
          >
            <input
              class="PrivateSwitchBase-input css-1m9pwf3"
              id="hvradio15-input"
              name="hvradiogroup9"
              type="radio"
              value="3"
            />
            <div
              class="HvIconBase-root HvIconBase-s"
              font-size="medium"
              name="RadioButtonUnselected"
            >
              <svg
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="color0"
                  d="M8 15.5a7.525 7.525 0 115.3-2.2A7.446 7.446 0 018 15.5z"
                  fill="#FBFCFC"
                />
                <path
                  class="color1"
                  d="M8 15a7.023 7.023 0 10-4.943-2.057A6.953 6.953 0 008 15m0 1a8 8 0 118-8 8 8 0 01-8 8z"
                  fill="#414141"
                />
              </svg>
            </div>
          </span>
          <label
            class="HvRadio-label HvLabel-root HvTypography-root HvTypography-highlightText"
            for="hvradio15-input"
            id="hvradio15-label"
          >
            Radio 3
          </label>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`HvRadioGroup sample snapshot testing Main (Vertical) 1`] = `
<div>
  <div
    class="HvRadioGroup-root HvFormElement-root"
  >
    <label
      class="HvRadioGroup-label HvLabel-root HvTypography-root HvTypography-highlightText"
      id="hvradiogroup1-label"
    >
      Choose your favorite checkboxes
    </label>
    <div
      aria-labelledby="hvradiogroup1-label"
      class="HvRadioGroup-group HvRadioGroup-vertical"
      role="radiogroup"
    >
      <div
        class="HvRadio-root HvFormElement-root"
      >
        <div
          class="HvRadio-container"
        >
          <span
            class="MuiButtonBase-root MuiRadio-root MuiRadio-colorDefault PrivateSwitchBase-root MuiRadio-root MuiRadio-colorDefault HvRadio-radio HvBaseRadio-root css-1gu2tss-MuiButtonBase-root-MuiRadio-root"
          >
            <input
              class="PrivateSwitchBase-input css-1m9pwf3"
              id="hvradio3-input"
              name="favorite"
              type="radio"
              value="1"
            />
            <div
              class="HvIconBase-root HvIconBase-s"
              font-size="medium"
              name="RadioButtonUnselected"
            >
              <svg
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="color0"
                  d="M8 15.5a7.525 7.525 0 115.3-2.2A7.446 7.446 0 018 15.5z"
                  fill="#FBFCFC"
                />
                <path
                  class="color1"
                  d="M8 15a7.023 7.023 0 10-4.943-2.057A6.953 6.953 0 008 15m0 1a8 8 0 118-8 8 8 0 01-8 8z"
                  fill="#414141"
                />
              </svg>
            </div>
          </span>
          <label
            class="HvRadio-label HvLabel-root HvTypography-root HvTypography-highlightText"
            for="hvradio3-input"
            id="hvradio3-label"
          >
            Radio 1
          </label>
        </div>
      </div>
      <div
        class="HvRadio-root HvFormElement-root"
      >
        <div
          class="HvRadio-container"
        >
          <span
            class="MuiButtonBase-root MuiRadio-root MuiRadio-colorDefault PrivateSwitchBase-root MuiRadio-root MuiRadio-colorDefault Mui-checked HvRadio-radio HvBaseRadio-root css-1gu2tss-MuiButtonBase-root-MuiRadio-root"
          >
            <input
              checked=""
              class="PrivateSwitchBase-input css-1m9pwf3"
              id="hvradio5-input"
              name="favorite"
              type="radio"
              value="2"
            />
            <div
              class="HvIconBase-root HvIconBase-s"
              font-size="medium"
              name="RadioButtonSelected"
            >
              <svg
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="color0"
                  d="M8 15.5a7.525 7.525 0 115.3-2.2A7.446 7.446 0 018 15.5z"
                  fill="#414141"
                />
                <path
                  class="color0"
                  d="M8 15a7.023 7.023 0 10-4.943-2.057A6.953 6.953 0 008 15m0 1a8 8 0 118-8 8 8 0 01-8 8z"
                  fill="#414141"
                />
                <path
                  class="color1"
                  d="M8 12a4.013 4.013 0 01-4-4 4.013 4.013 0 014-4 4.013 4.013 0 014 4 4.013 4.013 0 01-4 4z"
                  fill="#FBFCFC"
                />
              </svg>
            </div>
          </span>
          <label
            class="HvRadio-label HvLabel-root HvTypography-root HvTypography-highlightText"
            for="hvradio5-input"
            id="hvradio5-label"
          >
            Radio 2
          </label>
        </div>
      </div>
      <div
        class="HvRadio-root HvFormElement-root"
      >
        <div
          class="HvRadio-container"
        >
          <span
            class="MuiButtonBase-root MuiRadio-root MuiRadio-colorDefault PrivateSwitchBase-root MuiRadio-root MuiRadio-colorDefault HvRadio-radio HvBaseRadio-root css-1gu2tss-MuiButtonBase-root-MuiRadio-root"
          >
            <input
              class="PrivateSwitchBase-input css-1m9pwf3"
              id="hvradio7-input"
              name="favorite"
              type="radio"
              value="3"
            />
            <div
              class="HvIconBase-root HvIconBase-s"
              font-size="medium"
              name="RadioButtonUnselected"
            >
              <svg
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="color0"
                  d="M8 15.5a7.525 7.525 0 115.3-2.2A7.446 7.446 0 018 15.5z"
                  fill="#FBFCFC"
                />
                <path
                  class="color1"
                  d="M8 15a7.023 7.023 0 10-4.943-2.057A6.953 6.953 0 008 15m0 1a8 8 0 118-8 8 8 0 01-8 8z"
                  fill="#414141"
                />
              </svg>
            </div>
          </span>
          <label
            class="HvRadio-label HvLabel-root HvTypography-root HvTypography-highlightText"
            for="hvradio7-input"
            id="hvradio7-label"
          >
            Radio 3
          </label>
        </div>
      </div>
    </div>
  </div>
</div>
`;
